--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-argparse
-django
-django-widget-tweaks
-pip-chill
-python
-wsgiref
+argparse==1.4.0
+django==3.1
+django-cleanup==5.0.0
+django-widget-tweaks==1.4.8
+pillow==7.2.0
+pip-chill==1.0.0
